# strongswan

./: .appveyor.yml  .cirrus.yml  .codecov.yml  .dockerignore  .drone.yml  .editorconfig  .gitignore  .lgtm.yml  .lsan.suppressions  .travis.yml  Android.common.mk.in  Android.mk  Android.mk.in  CHANGES  CONTRIBUTING.md  CREDITS  ChangeLog  ChangeLog.update  Dockerfile  Dockerfile.release  Doxyfile.in  HACKING  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.inc  Makefile.ver  NEWS  README  README.md  README_LEGACY.md  SECURITY.md  TODO  autogen.sh  build.sh  ca.diff  configure.ac  configure.in  install-config  (+14 more)
conf/: .gitignore  Makefile.am  format-options.py  strongswan.conf  strongswan.conf.5.head.in  strongswan.conf.5.in  strongswan.conf.5.tail.in
conf/options/: aikgen2.opt  aikpub2.opt  attest.opt  charon-cmd.opt  charon-logging.opt  charon-nm.opt  charon.opt  imcv.opt  manager.opt  medsrv.opt  pacman.opt  pki.opt  pool.opt  sec-updater.opt  starter.opt  sw-collector.opt  tools.opt
conf/plugins/: attr-sql.opt  botan.opt  cga.opt  dead-peer-notify.opt  dhcp.opt  eap-anyconnect.opt  eap-radius.opt  eap-tnc.opt  eap-ttls.opt  gmalg.opt  ha.opt  imc-attestation.opt  imc-hcd.opt  imc-os.opt  imc-scanner.opt  imc-swid.opt  imc-swima.opt  imc-test.opt  imv-attestation.opt  imv-os.opt  imv-scanner.opt  imv-swid.opt  imv-swima.opt  imv-test.opt  kernel-klips.opt  kernel-netlink.opt  kernel-pfkey.opt  kernel-vpp.opt  load-tester.opt  narrowid.opt  openssl.opt  pkcs11.opt  quota.opt  resolve.opt  revocation.opt  save-keys.opt  sql.opt  stroke.opt  test.opt  tnc-ifmap.opt  (+3 more)
fuzz/: .gitignore  Makefile.am  fuzz_certs.c  fuzz_crls.c  fuzz_esp.c  fuzz_ids.c  fuzz_ike.c  fuzz_ikev1.c  fuzz_ocsp_req.c  fuzz_ocsp_rsp.c  fuzz_pa_tnc.c  fuzz_pb_tnc.c  fuzz_radius.c  fuzz_tls.c  fuzz_vici.c
man/: .gitignore  Makefile.am  ipsec.conf.5.in  ipsec.secrets.5.in  strongswan.conf.5.in
scripts/: .gitignore  Makefile  Makefile.am  addr2strongline  aes-test.c  bin2array.c  bin2sql.c  cfg-leak  cfg-nodebug  cfg-norm  crypt_burn.c  csd-wrapper-strongswan.sh  dh_speed.c  dh_speed.sh  dnssec.c  extract-dn.c  fetch.c  git-issue  git-version  hash_burn.c  id2sql.c  kdevstart  key2keyid.c  keyid2sql.c  malloc_speed.c  merge  nist_acvp.c  nist_kem_kat  nist_kem_kat.c  nist_sig_kat  nist_sig_kat.c  oid2der.c  pt_tls_test.c  pubkey_speed.c  pubkey_speed.sh  range2subnets.c  sedder  settings-test.c  test.sh  thread_analysis.c  (+2 more)
src/: Makefile  Makefile.am  Makefile.program  strongswan.conf
src/_copyright/: Makefile.am  _copyright.8  _copyright.c
src/_updown/: Makefile  Makefile.am  _updown  _updown.8  _updown.in
src/_updown_espmark/: Makefile.am  _updown_espmark  _updown_espmark.8
src/_updownv2/: Makefile.am  _updownv2  _updownv2.in
src/aikgen/: aikgen.c
src/aikpub2/: .gitignore  Makefile.am  aikpub2.c
src/cert-enroll/: .gitignore  Makefile.am  cert-enroll.conf  cert-enroll.in  cert-install-lighttpd  cert-install-openxpki  cert-install-sssd
src/charon/: Android.mk  Makefile  Makefile.am  charon.c  charon.kdevelop  daemon.c  daemon.h  debug
src/charon-cmd/: .gitignore  Makefile.am  charon-cmd.8.in  charon-cmd.c
src/charon-nm/: .gitignore  Makefile.am  charon-nm.c  nm-strongswan-service.conf  nm-strongswan-service.name.in
src/charon-svc/: charon-svc.c
src/charon-systemd/: Makefile.am  charon-systemd.c
src/charon-tkm/: Makefile.am  build_charon.gpr  build_common.gpr  build_tests.gpr
src/checksum/: Makefile.am  checksum_builder.c
src/conftest/: Makefile.am  README  actions.c  config.c  config.h  conftest.c  conftest.h
src/dumm/: .gitignore  Makefile  Makefile.am  bridge.c  bridge.h  cowfs.c  cowfs.h  dumm.c  dumm.h  guest.c  guest.h  iface.c  iface.h  irdumm.c  main.c  mconsole.c  mconsole.h  testing.c
src/freeswan/: ipsec_life.h  ipsec_policy.h  pfkey_v2_parse.c  subnetof.3  ultot.c
src/include/: Makefile.am
src/ipsec/: .gitignore  Android.mk  Makefile  Makefile.am  _ipsec.8.in  _ipsec.in  distro.txt  ipsec.8  ipsec.8.in  ipsec.in
src/lib/: types.c
src/libcharon/: Android.mk  Makefile.am  daemon.c  daemon.h  pf_handler.c  pf_handler.h
src/libcrypto/: Makefile.am
src/libfast/: Makefile.am  context.h  controller.h  dispatcher.c  dispatcher.h  fast_dispatcher.c  fast_dispatcher.h  fast_request.c  fast_request.h  fast_session.h  filter.h  request.c  request.h  session.c  session.h  smtp.c  smtp.h
src/libfreeswan/: .cvsignore  Android.mk  Makefile  Makefile.am  Makefile.kernel  README  addrtoa.c  addrtot.c  addrtypeof.c  anyaddr.3  anyaddr.c  atoaddr.3  atoaddr.c  atoasr.3  atoasr.c  atosa.3  atosa.c  atosubnet.c  atoul.3  atoul.c  copyright.c  datatot.c  freeswan.h  goodmask.3  goodmask.c  initaddr.3  initaddr.c  initsaid.c  initsubnet.3  initsubnet.c  internal.h  ipcomp.h  ipsec_ah.h  ipsec_alg.h  ipsec_encap.h  ipsec_eroute.h  ipsec_errs.h  ipsec_esp.h  ipsec_ipe4.h  ipsec_kversion.h  (+54 more)
src/libfreeswan.tmp/: Makefile  atoasr.3  ipsec_xmit.h  satot.c  ttodata.c
src/libhydra/: Android.mk  Makefile.am  hydra.c  hydra.h
src/libimcv/: .gitignore  Android.mk  Makefile.am  imcv.c  imcv.h
src/libipsec/: Android.mk  Makefile.am  codel_queue.c  codel_queue.h  esp_context.c  esp_context.h  esp_packet.c  esp_packet.h  ip_packet.c  ip_packet.h  ipsec.c  ipsec.h  ipsec_event_listener.h  ipsec_event_relay.c  ipsec_event_relay.h  ipsec_policy.c  ipsec_policy.h  ipsec_policy_mgr.c  ipsec_policy_mgr.h  ipsec_processor.c  ipsec_processor.h  ipsec_sa.c  ipsec_sa.h  ipsec_sa_mgr.c  ipsec_sa_mgr.h  w32.h
src/libpts/: Android.mk  Makefile.am  libpts.c  libpts.h
src/libpttls/: Makefile.am  pt_tls.c  pt_tls.h  pt_tls_client.c  pt_tls_client.h  pt_tls_connection.h  pt_tls_dispatcher.c  pt_tls_dispatcher.h  pt_tls_manager.c  pt_tls_manager.h  pt_tls_server.c  pt_tls_server.h
src/libradius/: Makefile.am  radius_client.c  radius_client.h  radius_config.c  radius_config.h  radius_message.c  radius_message.h  radius_mppe.h  radius_server.h  radius_socket.c  radius_socket.h
src/libsimaka/: Makefile.am  simaka_card.h  simaka_crypto.c  simaka_crypto.h  simaka_manager.c  simaka_manager.h  (+3 more)
(+9862 files in other folders)
